# liger

./: .gitignore  LICENSE  README.md  __init__.py  data_io.py  dataset.py  operations.py  pipelines.py  pyproject.toml  requirements.txt  run_tpot_pipeline.py  setup.py  training_testing.py
embedding/: __init__.py  embedding.py
embedding/llm/: llm.py
embedding/sentencetrans/: __init__.py  sentencetrans.py
experiments/: README.md
experiments/data_formatting/: .gitignore  README.md  constants.py  dataset_test.py  example_config.py  format_data.py  get_embeddings_ai.py  get_embeddings_st.py  get_functionals.py  get_prompts.py  get_responses.py  strip_responses.py
experiments/main/: .gitignore  README.md  bash_runner.sh  slurm_runner.sb  slurm_unfinished_submitter.sh  test_slurm.sh
experiments/model_testing/: .gitignore  README.md  example.py  load_and_test.py
experiments/tpot/: .gitignore  bash_runner.sh  bash_unfinished_starter.sh  e1_0_slurm.sh  list_unfinished.py  requirements.txt  slurm_runner.sb  slurm_submitter.sh  test_bash.sh
liger/: __init__.py  data_io.py  dataset.py  dataset_analysis.py  objectives.py  operations.py  output_processing.py  plotting.py  run_tpot_manager.py  run_tpot_pipeline.py  search_space_creator.py  smallville.py  training_testing.py
liger/embedding/: __init__.py  base.py  openai.py  sentencetrans.py
liger/managers/: __init__.py
liger/pipelines/: __init__.py  tpot.py
liger/surveying/: __init__.py  base.py  openai.py
liger/tpot/: __init__.py  manager.py  run_segment.py  (+1 more)
pipelines/: __init__.py  tpot.py
(+16 files in other folders)
